/*
 * RPC definitions used by the CMSG unit test suite.
 *
 * Copyright 2019, Allied Telesis Labs New Zealand, Ltd
 */

package cmsg;

enum number
{
    option allow_alias = true;

    NUMBER_ZERO = 0;
    NUMBER_ONE = 1;
    NUMBER_TWO = 2;
    NUMBER_2 = 2;
    NUMBER_MINUS_ONE = -1;
    NUMBER__2 = -2;
    NUMBER_MINUS_TWO = -2;
    NUMBER_TEN = 10;
    NUMBER_MINUS_TEN = -10;
}

message internal_dump_msg
{
    optional uint32 internal_uint32_value = 1;
}

message dump_msg
{
    optional bool bool_value = 1;
    optional uint32 uint32_value = 2;
    optional string string_value = 3;
    repeated uint32 uint32_array = 4;
    optional internal_dump_msg internal_message = 5;
}

service unit_test
{
}
